add branch name to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,7 @@
   </head>
   <body>
     <h1>Callbacks, Promises and Async Functions</h1>
+    <h2>Branch: async-await</h2>
+    <p>Implementing CRUD using ES2016 async/await functions</p>
   </body>
 </html>
