--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Callbacks, Promises and Async Functions</h1>
-    <h2>Branch: promises</h2>
-    <p>Implementing CRUD using Promises</p>
+    <h2>Branch: callbacks</h2>
+    <p>Implementing CRUD using Callbacks</p>
   </body>
 </html>
